--- a/app/src/main/res/menu/main_screen.xml
+++ b/app/src/main/res/menu/main_screen.xml
@@ -3,6 +3,7 @@
 <item android:id="@+id/action_plus"
     android:title="@string/add"
     app:showAsAction="always"
+    android:orderInCategory="100"
     android:icon="@android:drawable/ic_menu_add"
     />
 </menu>
