--- a/app/src/main/res/layout/new_item.xml
+++ b/app/src/main/res/layout/new_item.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="1"
-    >
+    android:weightSum="1">
 
     <View style="@style/Divider"/>
 
@@ -16,19 +15,19 @@
 
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="match_parent"
             android:orientation="horizontal"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="20dp"
             android:layout_marginRight="20dp"
-            android:layout_marginTop="20dp">
+            android:layout_marginBottom="20dp">
 
             <EditText
                 android:id="@+id/taskName"
                 android:background="@android:color/transparent"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:layout_margin="10dp" />
+                android:layout_weight="1" />
 
         </LinearLayout>
 
