--- a/app/src/main/res/layout/custom_row.xml
+++ b/app/src/main/res/layout/custom_row.xml
@@ -59,8 +59,8 @@
             android:layout_height="fill_parent"
             android:layout_gravity="center_horizontal"
             android:gravity="right|center"
-            android:layout_marginRight="20dp"
-            android:weightSum="1">
+            android:weightSum="1"
+            android:layout_marginRight="20dp">
 
             <TextView
                 android:id="@+id/dueMonth_todoItem"
@@ -70,7 +70,6 @@
                 android:textSize="15dp"
                 android:gravity="right"
                 android:textColor="@color/colorPrimary"
-                android:textStyle="italic"
                 android:layout_marginRight="5dp" />
 
             <TextView
@@ -80,8 +79,7 @@
                 android:text=""
                 android:textSize="15dp"
                 android:gravity="right"
-                android:textColor="@color/colorPrimary"
-                android:textStyle="italic" />
+                android:textColor="@color/colorPrimary" />
 
         </LinearLayout>
     </LinearLayout>
