--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,30 +1,8 @@
-<!--<resources>-->
-
-    <!--<style name="AppTheme" parent="@android:style/Theme.Holo.Light">-->
-        <!--&lt;!&ndash;<item name="android:actionBarStyle">@style/MyActionBar</item>&ndash;&gt;-->
-    <!--</style>-->
-
-     <!--<style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">-->
-    <!--<item name="android:background">#2aa4cd</item>-->
-    <!--</style>-->
-
-    <!--<style name="Divider">-->
-    <!--<item name="android:layout_width">match_parent</item>-->
-    <!--<item name="android:layout_height">1dp</item>-->
-    <!--<item name="android:background">?android:attr/listDivider</item>-->
-    <!--</style>-->
-
-<!--</resources>-->
-
-    <resources>
-    <style name="AppTheme" parent="Theme.AppCompat.Light">
-        <!-- Customize your theme here. -->
+ <resources>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">#3F51B5</item>
-        <!-- Light Indigo -->
         <item name="colorPrimaryDark">#3949AB</item>
-        <!-- Dark Indigo -->
         <item name="colorAccent">#00B0FF</item>
-        <!-- Blue -->
         <item name="android:actionBarStyle">@style/MyActionBar</item>
     </style>
 
@@ -39,18 +17,3 @@
     </style>
 
 </resources>
-
-
-<!--<style name="AppBaseTheme" parent="android:Theme.Holo.Light">-->
-<!--&lt;!&ndash; API 14 theme customizations can go here. &ndash;&gt;-->
-<!--<item name="android:actionBarStyle">@style/MyActionBar</item>-->
-<!--</style>-->
-
-<!--<style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">-->
-<!--<item name="android:background">#2aa4cd</item>-->
-<!--<item name="android:titleTextStyle">@style/Theme.MyAppTheme.ActionBar.TitleTextStyle</item>-->
-<!--</style>-->
-
-<!--<style name="Theme.MyAppTheme.ActionBar.TitleTextStyle" parent="android:style/TextAppearance.Holo.Widget.ActionBar.Title">-->
-<!--<item name="android:textColor">#FFFFFF</item>-->
-<!--</style>-->
